# infotecs_test

./: CMakeLists.txt
programs/program_1/: parser.hpp  sender.cpp  sender.hpp
programs/program_2/: receiver.cpp  receiver.hpp
